Revert "what is passive house spacing fixed mobile"
This reverts commit 2b9f8079e0ecdd6cb2ab5c84beb4259cd1b3137e.

--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -18,7 +18,7 @@
   /* box-shadow: 2px; */
 }
 
-@media screen and (min-width: 360px) {
+@media screen and (max-width: 960px) {
   .btn {
     height: 3rem;
   }
