--- a/src/components/Cards.css
+++ b/src/components/Cards.css
@@ -105,7 +105,7 @@
 }
 
 /* iPhone XR, Galaxy s20, Ipad Air, Ipad Mini, Surface pro 7, Galaxy A51*/
-@media only screen and (min-width: 360px) {
+@media only screen and (max-device-width: 960px) {
   #card-main {
     display: flex;
     flex-wrap: wrap;
@@ -125,9 +125,7 @@
     /* top: 0; */
     width: 100%;
     height: 16rem;
-    height: 16rem;
-    object-fit: cover;
-    object-position: center;
+    object-fit: contain;
     /* margin: 0;
     
     /* width: 100%; */
