--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -6,7 +6,7 @@
   justify-content: center;
   /* align-items: center; */
   width: 100%;
-  height: 79px;
+  height: 20%;
 }
 
 .contact-content p {
